--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     <!-- the entire body must be written by the student -->
     <script type="text/javascript" src="./script.js"></script>
 
-    <table border="1" style="background-color: yellow;">
+    <table style="background-color: yellow; border:1px">
 		<caption>Student Details</caption>
         <thead>
             <tr>
