--- a/main.html
+++ b/main.html
@@ -9,7 +9,12 @@
     <!-- the entire body must be written by the student -->
     <script type="text/javascript" src="./script.js"></script>
 
-    <table style="background-color: yellow; border:1px">
+	 <style>
+      table, th, tr, td{
+		  border: 1px solid black;
+	  }
+    </style>
+    <table style="background-color: yellow;">
 		<caption>Student Details</caption>
         <thead>
             <tr>
